# vkalgo

./: README.md  build.sh
data/: input_w1t9.txt  output_w1t9.txt
week1/: build.sh  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
week2/: CMakeLists.txt  build.sh  run.sh  test.cpp  week2.cpp  week2.hpp
